<?xml version="1.0"?>
<package>
  <name>plan_visualization</name>
  <version>0.0.0</version>
  <description>The plan_visualization package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="marcvinci@dfki.de">Marc Vinci</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

	<run_depend>python3-rospkg</run_depend>
	<run_depend>rqt_gui</run_depend>
	<run_depend>rqt_gui_py</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>rqt_graph</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
