<?xml version="1.0"?>
<package>
  <name>dot_graph_visualization</name>
  <version>1.0.0</version>
  <description>The dot_graph_visualization package</description>

  <maintainer email="marc.vinci@dfki.de">Marc Vinci</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

	<run_depend>python3-rospkg</run_depend>
	<run_depend>rqt_gui</run_depend>
	<run_depend>rqt_gui_py</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>rqt_graph</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
